WI - fix jumpiness in Extras / replace blue button color in Help pages with same blue used in Store

--- a/store/styles/WI-moretab.scss
+++ b/store/styles/WI-moretab.scss
@@ -68,6 +68,7 @@ $heroHorzMargin: 35px;
 .this-months-feature {
 	position: relative;
 	padding: 0 $heroHorzMargin;
+	height: 214px;
 	margin: 30px 0;
 }
 .hero-cover {
